[workspace]
members = [
    "packages/ansiq",
    "packages/ansiq-core",
    "packages/ansiq-macros",
    "packages/ansiq-runtime",
    "packages/ansiq-surface",
    "packages/ansiq-render",
    "packages/ansiq-layout",
    "packages/ansiq-widgets",
    "examples",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
rust-version = "1.85"
authors = ["Murong"]
repository = "https://github.com/murongg/ansiq"
homepage = "https://github.com/murongg/ansiq"

[workspace.dependencies]
ansiq = { version = "0.1.0", path = "packages/ansiq" }
ansiq-core = { version = "0.1.0", path = "packages/ansiq-core" }
ansiq-layout = { version = "0.1.0", path = "packages/ansiq-layout" }
ansiq-macros = { version = "0.1.0", path = "packages/ansiq-macros" }
ansiq-render = { version = "0.1.0", path = "packages/ansiq-render" }
ansiq-runtime = { version = "0.1.0", path = "packages/ansiq-runtime" }
ansiq-surface = { version = "0.1.0", path = "packages/ansiq-surface" }
ansiq-widgets = { version = "0.1.0", path = "packages/ansiq-widgets" }
crossterm = { version = "0.29", features = ["event-stream"] }
futures-util = "0.3"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync", "time"] }
unicode-width = "0.2"
