[package]
name = "ansiq-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false
description = "Runnable demos and showcase applications built on Ansiq."
readme = "../README.md"
keywords = ["tui", "terminal", "examples", "ui"]
categories = ["command-line-interface"]

[dependencies]
ansiq-core = { workspace = true }
ansiq-runtime = { workspace = true }
ansiq-surface = { workspace = true }
ansiq-render = { workspace = true }
ansiq-layout = { workspace = true }
ansiq-macros = { workspace = true }
ansiq-widgets = { workspace = true }
tokio.workspace = true
crossterm.workspace = true
sysinfo = "0.33"
openapiv3 = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_yaml = "0.9"
serde_json = "1"
